<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="notthegit.commander.kmitl.commander.Stage3">
    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="7"
        android:background="@android:color/holo_blue_light">
        <TextView
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HQ : Your object is to help our recon destroy enemy AA"/>
        <TextView
            android:id="@+id/napalm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CAS : 1" />
        <Button
            android:id="@+id/endTurn_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="End Turn"
            android:onClick="clickEndTurn"/>
        <Button
            android:id="@+id/menu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Menu"
            android:onClick="clickMenu"/>
        <Button
            android:id="@+id/next_level_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickNext"
            android:text="Next Level"
            android:visibility="gone" />
        <LinearLayout
            android:id="@+id/stage3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:background="@android:color/holo_blue_light">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
