package notthegit.commander.kmitl.commander;

import android.os.SystemClock;
import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class Stage3Test {
    @Rule
    public ActivityTestRule<Stage3> mActivityTestRule = new ActivityTestRule<>(Stage3.class);
    @Test
    public void testLoseDidNothing() {
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(withId(R.id.radio)).check(matches(withText("HQ : Tank ambush and destroy our scout\n Mission Fail.")));
        SystemClock.sleep(1000);
    }
    @Test
    public void testLoseAA() {
        ViewInteraction imageView = onView(allOf(childAtPosition(childAtPosition(withId(R.id.stage3), 2), 3), isDisplayed()));
        imageView.perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(withId(R.id.radio)).check(matches(withText("HQ : Enemy AA shot down our CAS!\n Mission Fail.")));
        SystemClock.sleep(1000);
    }
    @Test
    public void testLoseBlueOnBlue() {
        ViewInteraction imageView = onView(allOf(childAtPosition(childAtPosition(withId(R.id.stage3), 2), 0), isDisplayed()));
        imageView.perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(withId(R.id.radio)).check(matches(withText("Commissar : Traitor BLAM!")));
        SystemClock.sleep(1000);
    }
    @Test
    public void testLoseArty() {
        ViewInteraction imageView = onView(allOf(childAtPosition(childAtPosition(withId(R.id.stage3), 4), 2), isDisplayed()));
        imageView.perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(withId(R.id.radio)).check(matches(withText("HQ : Enemy arty score direct hit on recon\n Mission Fail.")));
        SystemClock.sleep(1000);
    }
    @Test
    public void testWin() {
        ViewInteraction imageView = onView(allOf(childAtPosition(childAtPosition(withId(R.id.stage3), 4), 2), isDisplayed()));
        imageView.perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        ViewInteraction imageView2 = onView(allOf(childAtPosition(childAtPosition(withId(R.id.stage3), 3), 1), isDisplayed()));
        imageView2.perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(allOf(withId(R.id.endTurn_btn), withText("End Turn"))).perform(click());
        onView(withId(R.id.radio)).check(matches(withText("HQ : Enemy AA destroy\n Mission accomplished")));
        SystemClock.sleep(1000);
    }
    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
